Converted some get methods in IRtcPeerConnection and implementations to proper cli properties.
Added IVideoRenderer

--- a/WebRtcNet/WebRtcNet.csproj
+++ b/WebRtcNet/WebRtcNet.csproj
@@ -49,6 +49,7 @@
     <Compile Include="IRtcDataChannel.cs" />
     <Compile Include="IRtcDtmfSender.cs" />
     <Compile Include="IRtcPeerConnection.cs" />
+    <Compile Include="IVideoRenderer.cs" />
     <Compile Include="MediaConstraints.cs" />
     <Compile Include="MediaStreamError.cs" />
     <Compile Include="MediaTrackCapabilities.cs" />
