Compile using Windows std libraries.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,21 @@ ipch
 *.user
 TestResults
 *.opendb
+/third-party/google/webrtc/.cipd
+/third-party/shared-items/googletest/CMakeFiles
+/third-party/shared-items/googletest/googlemock/CMakeFiles
+/third-party/shared-items/googletest/ZERO_CHECK.vcxproj.filters
+/third-party/shared-items/googletest/ZERO_CHECK.vcxproj
+/third-party/shared-items/googletest/RUN_TESTS.vcxproj.filters
+/third-party/shared-items/googletest/RUN_TESTS.vcxproj
+/third-party/shared-items/googletest/INSTALL.vcxproj.filters
+/third-party/shared-items/googletest/INSTALL.vcxproj
+/third-party/shared-items/googletest/googletest-distribution.sln
+/third-party/shared-items/googletest/googletest
+/third-party/shared-items/googletest/googlemock
+/third-party/shared-items/googletest/CTestTestfile.cmake
+/third-party/shared-items/googletest/cmake_install.cmake
+/third-party/shared-items/googletest/CMakeCache.txt
+/third-party/shared-items/googletest/ALL_BUILD.vcxproj.filters
+/third-party/shared-items/googletest/ALL_BUILD.vcxproj
+*.cache
